# fl-linux-window-manager

./: .metadata  CHANGELOG.md  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: main.cc  my_application.cc
example/test/: widget_test.dart
lib/: fl_linux_window_manager.dart  fl_linux_window_manager_method_channel.dart  fl_linux_window_manager_platform_interface.dart
lib/controller/: input_region_controller.dart
lib/models/: keyboard_mode.dart  layer.dart  screen_edge.dart
lib/widgets/: input_region.dart
linux/: CMakeLists.txt  fl_linux_window_manager_plugin.cc  flwm.cc  flwm.h
linux/include/fl_linux_window_manager/: fl_linux_window_manager_plugin.h
linux/src/: flwm.cc
linux/src/message_handler/: message_handler.cc  message_handler.h  method_call_arg_utils.cc  method_call_arg_utils.h  method_response_utils.cc  method_response_utils.h
linux/src/protocol_bindings/: wlr_layer_shell_protocol_client.h
linux/src/window_manager/: window_manager.cc  window_manager.h
linux/test/: fl_linux_window_manager_plugin_test.cc
test/: fl_linux_window_manager_method_channel_test.dart  fl_linux_window_manager_test.dart
